--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
                 <a href=""><i class="fa-regular fa-user" style="color: #030303;"></i></a>
 
             </div>
-            div.
-
+            
         </div>
 
         <div class="container-section1">
@@ -53,7 +52,9 @@
                         <p>Design your strategy <i class="fa-solid fa-arrow-right" style="color: #fcfcfc;"></i></p>
                     </div>
                     <div class="boxmeet">
-                        <p>Meet watsnox<i class="fa-solid fa-arrow-right" style="color: #0062ff;"></i></p>
+                        <p>Meet watsnox
+                            <i class="fa-solid fa-arrow-right" style="color: #0062ff;"></i>
+                        </p>
                     </div>
                 </div>
 
@@ -69,7 +70,7 @@
                     Simplify data management and get powerful flash <br>storage, the way you need it</p>
             </div>
             <div class="section2box">
-                <p>Learn more <i class="fa-solid fa-arrow-right" style="color: #fcfcfc;"></i></p>
+                <p>Learn more  <i class="fa-solid fa-arrow-right" style="color: #fcfcfc;"></i></p>
             </div>
         </div>
     </section>
@@ -84,8 +85,8 @@
             <div class="threetwo">
                 <div><img src="images/ibm-leadypen.jpg" width="250px" height="160px" alt=""></div>
                 <div class="desc">Make analyzing data no big deal</div>
-                <div><a href="">Watch the vedio (00:30)</a><i class="fa-sharp fa-regular fa-circle-play" style="color: #0062ff;"></i></div>
-                <div class="dislink"> <a href="">Personalize your experience<i class="fa-solid fa-arrow-right" style="color: #0062ff;"></i></a></div>
+                <div><a href="">Watch the vedio (00:30)</a>  <i class="fa-sharp fa-regular fa-circle-play" style="color: #0062ff;"></i></div>
+                <div class="dislink"> <a href="">Personalize your experience  <i class="fa-solid fa-arrow-right" style="color: #0062ff;"></i></a></div>
 
             </div>
             <div class="threethree">
@@ -94,14 +95,14 @@
 
                 </div>
                 <div class="desc3">Use data to save money, energy and <br> the planet</div>
-                <div><a href="">Watch the vedio (00:30)<i class="fa-sharp fa-regular fa-circle-play" style="color: #0062ff;"></i></a></div>
-                <div class="dislink"><a href="">See sastainability solution<i class="fa-solid fa-arrow-right" style="color: #0062ff;"></i></a></div>
+                <div><a href="">Watch the vedio (00:30)  <i class="fa-sharp fa-regular fa-circle-play" style="color: #0062ff;"></i></a></div>
+                <div class="dislink"><a href="">See sastainability solution  <i class="fa-solid fa-arrow-right" style="color: #0062ff;"></i></a></div>
             </div>
             <div class="threefour">
                 <img src="images/ground.jpg" width="250px" height="160px" alt="">
                 <div class="desc">Transforming the fan experience</div>
-                <div><a href="">Watch the vedio (00:30)<i class="fa-sharp fa-regular fa-circle-play" style="color:#0062ff;"></i></a></div>
-                <div class="dislink"><a href="">Explore data fabric<i class="fa-solid fa-arrow-right" style="color: #0062ff;"></i></a></div>
+                <div><a href="">Watch the vedio (00:30)  <i class="fa-sharp fa-regular fa-circle-play" style="color:#0062ff;"></i></a></div>
+                <div class="dislink"><a href="">Explore data fabric  <i class="fa-solid fa-arrow-right" style="color: #0062ff;"></i></a></div>
             </div>
         </div>
     </section>
@@ -208,7 +209,7 @@
             <div id="explore" class="network"><img  class="exploreimgs"src="images/din2img3.png"width="40px"height="40px" alt=""><p class="exploretxt">DevOps</p></div>
             <div id="explore" class="security"><img  class="exploreimgs"src="images/div2img4.png"width="40px"height="40px" alt=""><p class="exploretxt">Network</p></div>
             <div id="explore" class=""><img  class="exploreimgs"src="images/div2img5.png" alt=""><p class="exploretxt">Security & identity</p></div>
-            <div id="explore2" class="browse"><p class="exploretxt1">Brows Our Products<i class="fa-solid fa-arrow-right" style="color: #f9f9fc;"></i></p></div>
+            <div id="explore2" class="browse"><p class="exploretxt1">Brows Our Products  <i class="fa-solid fa-arrow-right" style="color: #f9f9fc;"></i></p></div>
         </div>
         <div class="analytic">
             <div id="explore" class="analytic"><img class="exploreimgs" src="images/div3img1.png" alt=""><p class="exploretxt">Analytics</p></div>
@@ -280,7 +281,9 @@
                 </div>
                 <div class="Learn">
                     <div class="readbox">
-                        <p>Accelerate threat detection<i class="fa-solid fa-arrow-right" style="color: #fcfcfc;"></i></p>
+                        <p>Accelerate threat detection
+                            <!-- <i class="fa-solid fa-arrow-right" style="color: #fcfcfc;"></i> -->
+                        </p>
                     </div>
                 </div>
 
@@ -292,8 +295,8 @@
             
             <p id="text8p">We discover, design and implement technology that helps clients solve problems—and the world run better.
             </p>
-            <div class="dislink"> <a href="">Abou  IBM </a></div>
-            <div class="dislink"> <a href="">Subscibe to IBM Newsletters </a></div>
+            <div class="dislink"> <a href="">Abou  IBM <i class="fa-solid fa-arrow-right" style="color: #0062ff;"></i></a></div>
+            <div class="dislink"> <a href="">Subscibe to IBM Newsletters <i class="fa-solid fa-arrow-right" style="color: #0062ff;"></i></a></div>
         </div>
     </section>
     <footer>
